tests/parse_only/errors/syn_lex/e6.src
.IPPcode21

DEFVAR GF@a
CONCAT GF@a string@abcd string@\02asd